Fix the way content flexes on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,12 +70,19 @@ a {
   overflow: scroll;
 }
 
+.centerContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (max-width: 850px) {
   main {
     min-width: 370px;
     height: 100%;
-    margin-top: 15%;
+    margin-top: 40px;
     margin-bottom: 5%;
+    max-height: 900px;
   }
   .container {
     flex-direction: column;
@@ -87,6 +94,10 @@ a {
   .rightContainer {
     width: 100%;
     min-height: 400px;
+    max-height: 900px;
+  }
+  .centerContent {
+   align-items: flex-start;
   }
 }
 
